# tp4-INF2705

./: .gitignore  README.md
inf2705/: OpenGLApplication.hpp
models/: staff-main.ply  staff-sphere.ply  staff.ply  sword-blade.ply  sword-grip.ply  sword-guard.ply  sword-pommel.ply  sword.ply
src/: CMakeLists.txt  TP.vcxproj  TP.vcxproj.filters  imgui.ini  main.cpp  model.cpp  model.hpp  shader_program.cpp  shaders.hpp  textures.cpp
src/shaders/: background.fs.glsl  background.vs.glsl  basic.fs.glsl  basic.vs.glsl  color.fs.glsl  color.vs.glsl  spline.fs.glsl  spline.vs.glsl
